WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
212378
IteratorClose should suppress GetMethod errors
https://bugs.webkit.org/show_bug.cgi?id=212378
Summary
IteratorClose should suppress GetMethod errors
Alexey Shvayka
Reported
2020-05-26 09:14:56 PDT
IteratorClose should suppress GetMethod errors
Attachments
Patch
(9.41 KB, patch)
2020-05-26 09:17 PDT
,
Alexey Shvayka
keith_miller
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Shvayka
Comment 1
2020-05-26 09:17:57 PDT
Created
attachment 400252
[details]
Patch
Keith Miller
Comment 2
2020-05-26 14:43:09 PDT
Comment on
attachment 400252
[details]
Patch r=me. RE, Your offline question about whether emitIteratorGenericClose should take the label. I don't think it's too important either way and I could imagine other places where you don't want the label. I'd leave it as is.
Alexey Shvayka
Comment 3
2020-05-26 15:16:14 PDT
Committed
r262165
: <
https://trac.webkit.org/changeset/262165
>
Radar WebKit Bug Importer
Comment 4
2020-05-26 15:17:13 PDT
<
rdar://problem/63644865
>
Alexey Shvayka
Comment 5
2020-05-26 15:18:49 PDT
(In reply to Keith Miller from
comment #2
)
> RE, Your offline question about whether emitIteratorGenericClose should take > the label. I don't think it's too important either way and I could imagine > other places where you don't want the label. I'd leave it as is.
Thank you, Keith!
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug